:boom: Initial commit for project modularization
:truck: Move classes to backend package to avoid any possible split-packages errors in the future

With this commit, we also transition from Shrinkwrap to JResolve to download artifacts from Maven as the first does not properly support Java Modules (https://github.com/shrinkwrap/resolver/issues/353).
Another alternative would have been Maven Resolve, but, being a typical Apache project, that is spaghetti coding at its finest (not that shrinkwrap is any better though, but at least it worked pretty good and was easy to use)